--- a/horizontal-template1/index.html
+++ b/horizontal-template1/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../jquery-albe-timeline-1.0.0.js"></script>
+    <script src="../jquery-albe-timeline-1.0.0.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
