Alterando nomes dos arquivos

--- a/horizontal-template1/index.html
+++ b/horizontal-template1/index.html
@@ -25,7 +25,7 @@
     <link rel="Shortcut Icon" type="image/x-icon" href="http://cdn.albertino.eti.br/favicon.ico" />
     <link rel="icon" type="image/gif" href="http://cdn.albertino.eti.br/favicon.gif">
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style-albe-timeline.css" />
 </head>
 <body>
 
@@ -36,6 +36,6 @@
 
     <script src="https://cdn.jsdelivr.net/jquery/1.11.1/jquery.min.js"></script>
     <script src="../jquery-albe-timeline-1.0.0.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="data-albe-timeline.js"></script>
 </body>
 </html>
