--- a/horizontal-template1/index.html
+++ b/horizontal-template1/index.html
@@ -24,7 +24,8 @@
     <link rel="author" type="text/plain" href="http://albertino.eti.br/humans.txt" />
     <link rel="Shortcut Icon" type="image/x-icon" href="http://cdn.albertino.eti.br/favicon.ico" />
     <link rel="icon" type="image/gif" href="http://cdn.albertino.eti.br/favicon.gif">
-
+     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
