--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<h1>jquery-albe-timeline</h1>
+
+<!-------------------------------
+     _    _ _
+    / \  | | |__   ___
+   / _ \ | | '_ \ / _ \
+  / ___ \| | |_) |  __/
+ /_/   \_\_|_.__/ \___|
+
+------------------------------->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <title>Timeline - Albe</title>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="author" content="Albertino Júnior" />
+    <meta name="description" content="Renderização de uma timeline em Jquery a partir de uma lista de dados em Json." />
+    <meta name="keywords" content="timeline, json, jquery, linha do tempo" />   
+    <meta name="designer" content="Albertino Júnior" />
+    <meta name="revisit-after" content="30 Days" />
+    <meta name="application-name" content="Albertino Júnior" />
+
+    <link rel="author" type="text/plain" href="http://albertino.eti.br/humans.txt" />
+    <link rel="Shortcut Icon" type="image/x-icon" href="http://cdn.albertino.eti.br/favicon.ico" />
+    <link rel="icon" type="image/gif" href="http://cdn.albertino.eti.br/favicon.gif">
+</head>
+<body>
+    <div style="text-align:center;">
+    <h1>Albe Timeline v3.0.0</h1>
+    <p>Renderização de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
+    
+    <h2>Horizontal</h2>
+    <ol style="display: inline-block;">
+        <li> <a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/horizontal/index.html">Template</a></li>
+    </ol>
+   
+    <h2>Vertical</h2>
+    <ol style="display: inline-block;">
+        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/vertical/index.html">Template</a></li>
+        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/simple/index.html">Simple</a></li>
+        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/minimalist/index.html">Minimalist</a></li>
+        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/audain/index.html">Audain</a></li>
+    </ol>
+    </div>
+
+</body>
+</html>
