--- a/index.html
+++ b/index.html
@@ -26,25 +26,31 @@
     <link rel="author" type="text/plain" href="http://albertino.eti.br/humans.txt" />
     <link rel="Shortcut Icon" type="image/x-icon" href="http://cdn.albertino.eti.br/favicon.ico" />
     <link rel="icon" type="image/gif" href="http://cdn.albertino.eti.br/favicon.gif">
+	
+	<style type="text/css">
+		iframe { 
+			border: none;
+			height: 500px;
+			width: 100%;
+		}
+	</style>
+	
 </head>
 <body>
-    <div style="text-align:center;">
-    <h1>Albe Timeline v3.0.0</h1>
-    <p>Renderização de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
-    
-    <h2>Horizontal</h2>
-    <ol style="display: inline-block;">
-        <li> <a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/horizontal/index.html">Template</a></li>
-    </ol>
-   
-    <h2>Vertical</h2>
-    <ol style="display: inline-block;">
-        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/vertical/index.html">Template</a></li>
-        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/simple/index.html">Simple</a></li>
-        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/minimalist/index.html">Minimalist</a></li>
-        <li><a target="_blank" href="https://albejr.github.io/jquery-albe-timeline/templates/audain/index.html">Audain</a></li>
-    </ol>
-    </div>
 
+	<h1>Albe Timeline v3.0.0</h1>
+	<p>Renderização de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
+
+	<h2>Horizontal</h2>
+	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/horizontal/index.html"></iframe>
+	<h2>Vertical</h2>
+	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/vertical/index.html"></iframe>
+	<h2>Simple</h2>
+	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/simple/index.html"></iframe>
+	<h2>Minimalist</h2>
+	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/minimalist/index.html"></iframe>
+	<h2>Audain</h2>
+	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/audain/index.html"></iframe>
+		
 </body>
 </html>
