--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="author" content="Albertino Júnior" />
-    <meta name="description" content="Renderização de uma timeline em Jquery a partir de uma lista de dados em Json." />
+    <meta name="author" content="Albertino JÃºnior" />
+    <meta name="description" content="RenderizaÃ§Ã£o de uma timeline em Jquery a partir de uma lista de dados em Json." />
     <meta name="keywords" content="timeline, json, jquery, linha do tempo" />   
-    <meta name="designer" content="Albertino Júnior" />
+    <meta name="designer" content="Albertino JÃºnior" />
     <meta name="revisit-after" content="30 Days" />
-    <meta name="application-name" content="Albertino Júnior" />
+    <meta name="application-name" content="Albertino JÃºnior" />
 
     <link rel="author" type="text/plain" href="http://albertino.eti.br/humans.txt" />
     <link rel="Shortcut Icon" type="image/x-icon" href="http://cdn.albertino.eti.br/favicon.ico" />
@@ -33,13 +33,18 @@
 			height: 500px;
 			width: 100%;
 		}
+		
+		.blend-gradient {
+  background: -webkit-linear-gradient(180deg, rgb(22, 135, 237), rgb(20, 55, 90));
+  background: linear-gradient(180deg, rgb(22, 135, 237), rgb(20, 55, 90));
+}
 	</style>
 	
 </head>
-<body>
+<body class="blend-gradient">
 
 	<h1>Albe Timeline v3.0.0</h1>
-	<p>Renderização de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
+	<p>RenderizaÃ§Ã£o de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
 
 	<h2>Horizontal</h2>
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/horizontal/index.html"></iframe>
