--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <link rel="icon" type="image/gif" href="http://cdn.albertino.eti.br/favicon.gif">
 	
 	<style type="text/css">
+		body{
+			color: #FFF !important;
+		}
+		
 		iframe { 
 			border: none;
 			height: 500px;
