--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="author" type="text/plain" href="http://albertino.eti.br/humans.txt" />
     <link rel="Shortcut Icon" type="image/x-icon" href="http://cdn.albertino.eti.br/favicon.ico" />
     <link rel="icon" type="image/gif" href="http://cdn.albertino.eti.br/favicon.gif">
-	
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<style type="text/css">
 	body,
 	html{
@@ -34,7 +34,9 @@
 			padding: 0;
 	}
 		body{
-			color: #FFF !important;			
+			color: #FFF !important;	
+			font-family: 'Raleway', sans-serif;
+			font-size: 18px;
 		}
 		
 		iframe { 
