--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@ background: linear-gradient(to left, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Fi
 <body class="blend-gradient">
 
 <div class="centro">
+	<div class="centro">
 	<h1>Albe Timeline v3.0.0</h1>
 	<p>Renderização de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
-
+	</div>
 	<h2>Horizontal</h2>
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/horizontal/index.html"></iframe>
 	<h2>Vertical</h2>
