--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ background: linear-gradient(to left, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Fi
 <body class="blend-gradient">
 
 <div class="centro">
-	<div class="centro">
+	<div style="text-align:center;">
 	<h1>Albe Timeline v3.0.0</h1>
 	<p>Renderização de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
 	</div>
