--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 			font-size: 18px;
 		}
 		
+		h1{
+			    font-size: 2.5em;
+			font-weight: bold;
+		}
+		
+		p{     opacity: 0.7; }
+		
 		iframe { 
 			border: none;
 			height: 500px;	
