--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@
 		
 		p{     opacity: 0.7; }
 		
+		hr,
+		iframe{margin-bottom:40px;}
+		
 		iframe { 
 			border: none;
 			height: 500px;	
-	width: 100%;			
+	width: 100%;		
 		}
+		
+		
 		
 		.blend-gradient {
 background: #23074d;  /* fallback for old browsers */
