--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@ background: linear-gradient(to left, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Fi
 	<div style="text-align:center;">
 	<h1>Albe Timeline v3.0.0</h1>
 	<p>Renderização de uma timeline com Jquery a partir de uma lista de dados em Json.</p>
-	</div>
+		
+		<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/Albejr/jquery-albe-timeline" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star Albejr/jquery-albe-timeline on GitHub">Star</a>
+<a class="github-button" href="https://github.com/Albejr/jquery-albe-timeline/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download Albejr/jquery-albe-timeline on GitHub">Download</a>	</div>
 	<h2>Horizontal</h2>
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/horizontal/index.html"></iframe>
 	<h2>Vertical</h2>
@@ -90,5 +93,8 @@ background: linear-gradient(to left, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Fi
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/audain/index.html"></iframe>
 	<hr />
 	</div>	
+	
+	<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
