--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ background: linear-gradient(to left, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Fi
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/vertical/index.html"></iframe>
 	<h2>Simple</h2>
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/simple/index.html"></iframe>
-	<h2>Minimalist</h2>
+	<h2>Minimalist with hours</h2>
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/minimalist/index.html"></iframe>
 	<h2>Audain</h2>
 	<iframe src="https://albejr.github.io/jquery-albe-timeline/templates/audain/index.html"></iframe>
